# qrcode53bytes

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cache50.txt  readme.md  temp50.txt
docs/: index.html  search-index.js  settings.html  source-files.js
docs/implementors/lazy_static/: trait.LazyStatic.js
docs/qrcode53bytes/: all.html  index.html  sidebar-items.js
docs/qrcode53bytes/builder/: enum.Error.html  index.html  sidebar-items.js  struct.QrBuilder.html  struct.ZigZagIt.html
docs/qrcode53bytes/data/: fn.append.html  fn.bitvec_char_count.html  fn.bitvec_data.html  fn.encode.html  fn.encode_byte_data.html  fn.encode_with_mode.html  fn.string_to_bytes.html  index.html  sidebar-items.js
docs/qrcode53bytes/ec/: enum.ECLevel.html  fn.add.html  fn.generate_ec_codewords.html  fn.group_into_blocks.html  index.html  sidebar-items.js  static.EXP.html  static.LOG.html  static.REMAINDER_BITS.html
docs/qrcode53bytes/info/: fn.block_data.html  fn.block_ec_count.html  fn.format_info.html  fn.group_block_count.html  fn.total_bits.html  fn.total_codewords.html  index.html  sidebar-items.js  static.FORMAT_INFO.html
docs/qrcode53bytes/mask/: fn.apply_mask.html  fn.apply_mask_fun.html  fn.count_dl_col.html  fn.count_dl_patterns.html  fn.count_dl_row.html  fn.diff_5.html  fn.eval_5_col.html  fn.eval_5_row.html  fn.evaluate.html  fn.evaluate_2x2.html  fn.evaluate_5_in_line.html  fn.evaluate_bw.html  fn.evaluate_dl_pattern.html  fn.mask.html  index.html  sidebar-items.js  struct.DLP1.html  struct.DLP2.html  struct.Mask.html
docs/qrcode53bytes/matrix/: enum.Module.html  index.html  sidebar-items.js  struct.Matrix.html
docs/qrcode53bytes/mode/: enum.Mode.html  index.html  sidebar-items.js
docs/qrcode53bytes/qr/: index.html  sidebar-items.js  struct.Qr.html
docs/qrcode53bytes/rendercommons/: fn.to_dbg_string.html  index.html  sidebar-items.js  struct.Color.html  struct.ParseColorError.html
docs/qrcode53bytes/renderfordodrio/: index.html  sidebar-items.js  struct.SvgDodrioRenderer.html
docs/qrcode53bytes/renderstring/: index.html  sidebar-items.js  struct.StringRenderer.html
docs/qrcode53bytes/rendersvg/: index.html  sidebar-items.js  (+1 more)
examples/: simple.rs  svg.rs  svgdodrio.rs
src/: builder.rs  data.rs  ec.rs  info.rs  lib.rs  mask.rs  matrix.rs  mode.rs  qr.rs  render.rs  rendercommons.rs  renderfordodrio.rs  renderstring.rs  rendersvg.rs  version.rs
tmp/: temp49.txt
(+35 files in other folders)
