[package]
name = "qrcode53bytes"
version = "1.1.0"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="QR code for 53 bytes"
repository = "https://github.com/LucianoBestia/qrcode53bytes"
readme = "README.md"
license = "MIT"
keywords = ["rust", "qrcode", "wasm"]
categories = ["multimedia::images"]
# publish to crates.io only these files
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/builder.rs",
    "src/data.rs",
    "src/ec.rs",
    "src/info.rs",
    "src/lib.rs",
    "src/mask.rs",
    "src/matrix.rs",
    "src/mode.rs",
    "src/qr.rs",
    "src/rendercommons.rs",
    "src/renderfordodrio.rs",
    "src/renderstring.rs",
    "src/rendersvg.rs",
    "src/version.rs",
]

[dependencies]
# later of bitvec 0.17.4 have breaking changes
bitvec = "0.17.4"
lazy_static="1.4.0"
