[package]
name = "qrcode53bytes"
version = "1.1.1"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "QR code for 53 bytes"
repository = "https://github.com/bestia-dev/qrcode53bytes"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["rust", "qrcode", "wasm"]
# Allowed categories are listed here <https://crates.io/category_slugs>
categories = ["multimedia::images"]
# publish to crates.io only these files
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/builder.rs",
    "src/data.rs",
    "src/ec.rs",
    "src/info.rs",
    "src/lib.rs",
    "src/mask.rs",
    "src/matrix.rs",
    "src/mode.rs",
    "src/qr.rs",
    "src/rendercommons.rs",
    "src/renderfordodrio.rs",
    "src/renderstring.rs",
    "src/rendersvg.rs",
    "src/version.rs",
]

[dependencies]
# later of bitvec 0.17.4 have breaking changes
bitvec = "0.17.4"
lazy_static="1.4.0"
